--- a/tacobandits/src/App.css
+++ b/tacobandits/src/App.css
@@ -1,3 +1,36 @@
+/***** GENERAL STYLES *****/
+
 .App {
   text-align: center;
+}
+
+
+
+/***** WORLD.JS STYLES *****/
+
+.container {
+  width: 100vw;
+}
+
+.secContainer {
+  width: 95vw;
+  margin: 10px auto; 
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+
+/***** ROOM.JS STYLES *****/
+
+.emptyRoom {
+  height: 150px;
+  width: 150px;
+  background: black;
+  margin: 3px;
+  padding: 30px 20px;
+}
+
+.emptyRoom:hover {
+  background: white;
 }
