--- a/tacobandits/src/App.css
+++ b/tacobandits/src/App.css
@@ -2,14 +2,67 @@
 
 .App {
   text-align: center;
+  background-image: url('https://www.publicdomainpictures.net/pictures/200000/nahled/gray-fur-background-14795967451G7.jpg');
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-attachment: fixed;
 }
 
+i {
+  color: purple;
+}
 
+.title {
+  background: rgba(255, 255, 255, 0.486);
+  border-radius: 85px;
+  padding: 15px;
+  margin: 30px 200px;
+  font-weight: bold;
+  font-size: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.title i {
+  font-size: 60px;
+}
+
+span {
+  color: purple
+}
 
 /***** WORLD.JS STYLES *****/
 
 .container {
   width: 100vw;
+  text-align: center;
+}
+
+.container h2 {
+  font-weight: bold;
+  font-size: 30px;
+  background: rgba(255, 255, 255, 0.486);
+  border-radius: 85px;
+  padding: 15px;
+  margin: 10px 400px;
+}
+
+.instructions {
+  margin: 30px;
+  text-align: left;
+  background: rgba(255, 255, 255, 0.486);
+  border-radius: 85px;
+}
+
+.indInstructions {
+  display: flex;
+  margin: 10px auto;
+  width: 75%;
+}
+
+.indInstructions i {
+  margin: 21px 10px;
 }
 
 .secContainer {
