--- a/tacobandits/src/App.css
+++ b/tacobandits/src/App.css
@@ -3,8 +3,8 @@
 .App {
   text-align: center;
   background-image: url('https://www.publicdomainpictures.net/pictures/200000/nahled/gray-fur-background-14795967451G7.jpg');
-  background-repeat: no-repeat;
   background-size: 100%;
+  background-repeat: no-repeat;
   background-attachment: fixed;
 }
 
@@ -13,7 +13,7 @@ i {
 }
 
 .title {
-  background: rgba(255, 255, 255, 0.486);
+  background: rgba(255, 255, 255, 0.712);
   border-radius: 85px;
   padding: 15px;
   margin: 30px 200px;
@@ -42,7 +42,7 @@ span {
 .container h2 {
   font-weight: bold;
   font-size: 30px;
-  background: rgba(255, 255, 255, 0.486);
+  background: rgba(255, 255, 255, 0.712);
   border-radius: 85px;
   padding: 15px;
   margin: 10px 400px;
@@ -51,7 +51,7 @@ span {
 .instructions {
   margin: 30px;
   text-align: left;
-  background: rgba(255, 255, 255, 0.486);
+  background: rgba(255, 255, 255, 0.712);
   border-radius: 85px;
 }
 
@@ -85,13 +85,57 @@ span {
 }
 
 .emptyRoom:hover {
-  background: white;
+  background: rgba(255, 255, 255, 0.712);
+}
+
+.winner {
+  width: 150px;
+  padding: 5px;
+  margin: 3px;
 }
 
 
-/***** MODAL.JS STYLES *****/
+/***** LOGIN.JS/REGISTER.JS STYLES *****/
 
-.winner {
+.logContainer {
+  height: 100vh;
+}
+
+.formThing {
+  background: rgba(255, 255, 255, 0.712);
+  border-radius: 85px;
+  margin: 1% 30%;
+  padding: 20px;
+}
+
+.formInput {
+  margin: 5px;
+}
+
+.bigButton {
+  min-width: 65px;
+  margin: 5px;
   padding: 5px;
-  margin: 3px;
+  border: 2px solid purple;
+  border-radius: 10px;
+  text-decoration: none;
+  color: purple;
+}
+
+.bigButton:hover {
+  background: purple;
+  border: 2px solid white;
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.navLink {
+  color: purple;
+  text-decoration: none;
+}
+
+.navLink:hover {
+  color: white;
+  font-weight: bold;
 }
